--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "react-complete-guide",
+  "name": "pizza-menu",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "eslint": "^8.40.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "styled-components": "^5.3.10",
-    "web-vitals": "^3.3.1"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,10 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "stylelint": "^15.6.2",
-    "stylelint-config-standard": "^33.0.0",
-    "tailwindcss": "^3.3.2"
   }
 }
